[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/fireball.gd" type="Script" id=1]
[ext_resource path="res://scripts/fireballArea.gd" type="Script" id=2]
[ext_resource path="res://assets/fireball.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0
height = 21.0597

[node name="fireball" type="Node2D"]

script/script = ExtResource( 1 )

[node name="fireballKinem" type="KinematicBody2D" parent="."]

input/pickable = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="fireballArea" type="Area2D" parent="fireballKinem"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( -2.81566e-08, -0.644147, 0.340315, -1.48756e-08, -21.1685, -0.249746 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 2 )

[node name="fireballColl" type="CollisionShape2D" parent="fireballKinem/fireballArea"]

transform/pos = Vector2( -21.1685, -0.249746 )
transform/rot = 90.0
transform/scale = Vector2( 0.644147, 0.340315 )
shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="fireballAnim" type="Sprite" parent="fireballKinem"]

texture = ExtResource( 3 )
vframes = 8
hframes = 8
region_rect = Rect2( 0, 0, 64, 64 )
__meta__ = {
"_edit_lock_": true
}


